# libwebsocket

./: CMakeLists.txt  README.md
include/: certs.h  websocket.h
src/: base64.c  example.cpp  websocket.cpp
